istio/backend-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend-services
  namespace: apps
spec:
  gateways:
  - backend-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        regex: /v1/httpbin(/[^/]+)*/?
    rewrite:
      authority: orders.apps.svc.cluster.local:8080
      uri: /orders/100000/random
    route:
    - destination:
        host: orders.apps.svc.cluster.local
        port:
          number: 8080
    timeout: 5s
  - match:
    - uri:
        regex: /customers(/[^/]+)*/?
    route:
    - destination:
        host: customers.apps.svc.cluster.local
        port:
          number: 8080
      weight: 100
    timeout: 300s
  - match:
    - uri:
        regex: /orders(/[^/]+)*/?
    rewrite:
      authority: orders.apps.svc.cluster.local:8080
    route:
    - destination:
        host: orders.apps.svc.cluster.local
        port:
          number: 8080
      weight: 100
    timeout: 300s
  - match:
    - uri:
        regex: /query(/[^/]+)*/?
    rewrite:
      authority: orders-gql.apps.svc.cluster.local:8080
    route:
    - destination:
        host: orders-gql.apps.svc.cluster.local
        port:
          number: 8080
      weight: 100
    timeout: 300s
  - match:
    - uri:
        regex: /items(/[^/]+)*/?
    route:
    - destination:
        host: inventory.apps.svc.cluster.local
        port:
          number: 8080
      weight: 100
    timeout: 300s
  - match:
    - uri:
        regex: /tracking(/[^/]+)*/?
    route:
    - destination:
        host: tracking-client.apps.svc.cluster.local
        port:
          number: 8080
      weight: 100
    timeout: 300s
  - match:
    - uri:
        regex: /shipping(/[^/]+)*/?
    rewrite:
      uri: /v1/tracking
    route:
    - destination:
        host: tracking.apps.svc.cluster.local
        port:
          number: 50051
      weight: 100
    timeout: 300s
  - match:
    - uri:
        regex: /v1/ws(/[^/]+)*/?
    route:
    - destination:
        host: websockets.apps.svc.cluster.local
        port:
          number: 3000
      weight: 100
    timeout: 300s
