istio/envoyfilter-customers.yaml
# Copyright 2020 Google LLC
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
# 
#       http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

# Installs an Istio EnvoyFilter in the default namespace.
# It applies to all services in the namespace. If you wish, you
# may tailor by specifying `workloadSelector` for specific targets.
# Uses `apigee-remote-service-envoy.apigee:5000` as target.

# This is for Istio 1.9+.

apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: apigee-remote-customers
  namespace: apps 
spec:
  workloadSelector:
    labels:
      app: customers 
  configPatches:

  - applyTo: HTTP_FILTER
    match:
      proxy:
        proxyVersion: '^1\.(9|1\d).*'
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.http_connection_manager
            subFilter:
              name: envoy.router
    
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.ext_authz
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
          transport_api_version: V3
          grpc_service:
            google_grpc:
              target_uri: apigee-remote-service-envoy.apigee:5000
              stat_prefix: apigee-remote-service
            timeout: 1s
          metadata_context_namespaces:
            - envoy.filters.http.jwt_authn

  - applyTo: NETWORK_FILTER
    match:
      proxy:
        proxyVersion: '^1\.(9|1\d).*'
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
    patch:
      operation: MERGE
      value:
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          access_log:
          - name: envoy.access_loggers.http_grpc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig
              common_config:
                transport_api_version: V3
                log_name: apigee-remote-service
                grpc_service:
                  google_grpc:
                    target_uri: apigee-remote-service-envoy.apigee:5000
                    stat_prefix: apigee-remote-service
